@@ -1,5 +1,5 @@
 argv = ['/home/svaughan/.pebble-sdk/SDKs/current/sdk-core/pebble/waf', 'configure']
-environ = {'XDG_GREETER_DATA_DIR': '/var/lib/lightdm-data/svaughan', 'QT4_IM_MODULE': 'xim', 'HOME': '/home/svaughan', 'DISPLAY': ':0', 'LANG': 'en_US.UTF-8', 'SHELL': '/bin/bash', 'XDG_DATA_DIRS': '/usr/share/ubuntu:/usr/share/gnome:/usr/local/share/:/usr/share/', 'MANDATORY_PATH': '/usr/share/gconf/ubuntu.mandatory.path', 'COMPIZ_CONFIG_PROFILE': 'ubuntu', 'JOB': 'dbus', 'TEXTDOMAIN': 'im-config', 'XMODIFIERS': '@im=ibus', 'SELINUX_INIT': 'YES', 'XDG_RUNTIME_DIR': '/run/user/1000', 'COMPIZ_BIN_PATH': '/usr/bin/', 'VTE_VERSION': '3409', 'PEBBLE_TOOLCHAIN_PATH': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/arm-cs-tools/bin', 'LESSOPEN': '| /usr/bin/lesspipe %s', 'XDG_SESSION_ID': 'c2', 'DBUS_SESSION_BUS_ADDRESS': 'unix:abstract=/tmp/dbus-NRLZ1WUjbL', 'GNOME_KEYRING_PID': '1703', 'DESKTOP_SESSION': 'ubuntu', 'PYTHONHOME': '/home/svaughan/.pebble-sdk/SDKs/current/sdk-core/../.env', 'LESSCLOSE': '/usr/bin/lesspipe %s %s', 'DEFAULTS_PATH': '/usr/share/gconf/ubuntu.default.path', 'INSTANCE': '', 'XDG_MENU_PREFIX': 'gnome-', 'LS_COLORS': 'rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arj=01;31:*.taz=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.zip=01;31:*.z=01;31:*.Z=01;31:*.dz=01;31:*.gz=01;31:*.lz=01;31:*.xz=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.jpg=01;35:*.jpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.axv=01;35:*.anx=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.axa=00;36:*.oga=00;36:*.spx=00;36:*.xspf=00;36:', 'PHONESIM_PATH': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/.env//bin/pypkjs', 'XDG_SEAT': 'seat0', 'GNOME_DESKTOP_SESSION_ID': 'this-is-deprecated', 'XDG_CURRENT_DESKTOP': 'Unity', 'QT_IM_MODULE': 'ibus', 'LOGNAME': 'svaughan', 'USER': 'svaughan', 'GNOME_KEYRING_CONTROL': '/run/user/1000/keyring-EMjaBD', 'XDG_VTNR': '7', 'PATH': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/arm-cs-tools/bin:/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/bin:/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/bin:/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games', 'SESSION': 'ubuntu', 'TERM': 'xterm', 'XDG_SESSION_PATH': '/org/freedesktop/DisplayManager/Session0', 'XAUTHORITY': '/home/svaughan/.Xauthority', 'LANGUAGE': 'en_US', 'SESSION_MANAGER': 'local/ubuntu:@/tmp/.ICE-unix/1920,unix/ubuntu:/tmp/.ICE-unix/1920', 'SHLVL': '2', 'QT_QPA_PLATFORMTHEME': 'appmenu-qt5', 'CLUTTER_IM_MODULE': 'xim', 'WINDOWID': '60817419', 'SESSIONTYPE': 'gnome-session', 'IM_CONFIG_PHASE': '1', 'GPG_AGENT_INFO': '/run/user/1000/keyring-EMjaBD/gpg:0:1', 'SSH_AUTH_SOCK': '/run/user/1000/keyring-EMjaBD/ssh', 'GDMSESSION': 'ubuntu', 'TEXTDOMAINDIR': '/usr/share/locale/', 'NO_GCE_CHECK': 'False', 'XDG_SEAT_PATH': '/org/freedesktop/DisplayManager/Seat0', '_': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/.env/bin/python', 'GTK_IM_MODULE': 'ibus', 'UPSTART_SESSION': 'unix:abstract=/com/ubuntu/upstart-session/1000/1705', 'XDG_CONFIG_DIRS': '/etc/xdg/xdg-ubuntu:/usr/share/upstart/xdg:/etc/xdg', 'GDM_LANG': 'en_US', 'GTK_MODULES': 'overlay-scrollbar:unity-gtk-module', 'PWD': '/home/svaughan/pebble-dev/pebble-games', 'COLORTERM': 'gnome-terminal'}
+environ = {'XDG_GREETER_DATA_DIR': '/var/lib/lightdm-data/svaughan', 'QT4_IM_MODULE': 'xim', 'HOME': '/home/svaughan', 'DISPLAY': ':0', 'LANG': 'en_US.UTF-8', 'SHELL': '/bin/bash', 'XDG_DATA_DIRS': '/usr/share/ubuntu:/usr/share/gnome:/usr/local/share/:/usr/share/', 'MANDATORY_PATH': '/usr/share/gconf/ubuntu.mandatory.path', 'COMPIZ_CONFIG_PROFILE': 'ubuntu', 'JOB': 'dbus', 'TEXTDOMAIN': 'im-config', 'XMODIFIERS': '@im=ibus', 'SELINUX_INIT': 'YES', 'XDG_RUNTIME_DIR': '/run/user/1000', 'COMPIZ_BIN_PATH': '/usr/bin/', 'VTE_VERSION': '3409', 'PEBBLE_TOOLCHAIN_PATH': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/arm-cs-tools/bin', 'LESSOPEN': '| /usr/bin/lesspipe %s', 'XDG_SESSION_ID': 'c2', 'DBUS_SESSION_BUS_ADDRESS': 'unix:abstract=/tmp/dbus-wlPlWBZP8P', 'GNOME_KEYRING_PID': '1715', 'DESKTOP_SESSION': 'ubuntu', 'PYTHONHOME': '/home/svaughan/.pebble-sdk/SDKs/current/sdk-core/../.env', 'LESSCLOSE': '/usr/bin/lesspipe %s %s', 'DEFAULTS_PATH': '/usr/share/gconf/ubuntu.default.path', 'INSTANCE': '', 'XDG_MENU_PREFIX': 'gnome-', 'LS_COLORS': 'rs=0:di=01;34:ln=01;36:mh=00:pi=40;33:so=01;35:do=01;35:bd=40;33;01:cd=40;33;01:or=40;31;01:su=37;41:sg=30;43:ca=30;41:tw=30;42:ow=34;42:st=37;44:ex=01;32:*.tar=01;31:*.tgz=01;31:*.arj=01;31:*.taz=01;31:*.lzh=01;31:*.lzma=01;31:*.tlz=01;31:*.txz=01;31:*.zip=01;31:*.z=01;31:*.Z=01;31:*.dz=01;31:*.gz=01;31:*.lz=01;31:*.xz=01;31:*.bz2=01;31:*.bz=01;31:*.tbz=01;31:*.tbz2=01;31:*.tz=01;31:*.deb=01;31:*.rpm=01;31:*.jar=01;31:*.war=01;31:*.ear=01;31:*.sar=01;31:*.rar=01;31:*.ace=01;31:*.zoo=01;31:*.cpio=01;31:*.7z=01;31:*.rz=01;31:*.jpg=01;35:*.jpeg=01;35:*.gif=01;35:*.bmp=01;35:*.pbm=01;35:*.pgm=01;35:*.ppm=01;35:*.tga=01;35:*.xbm=01;35:*.xpm=01;35:*.tif=01;35:*.tiff=01;35:*.png=01;35:*.svg=01;35:*.svgz=01;35:*.mng=01;35:*.pcx=01;35:*.mov=01;35:*.mpg=01;35:*.mpeg=01;35:*.m2v=01;35:*.mkv=01;35:*.webm=01;35:*.ogm=01;35:*.mp4=01;35:*.m4v=01;35:*.mp4v=01;35:*.vob=01;35:*.qt=01;35:*.nuv=01;35:*.wmv=01;35:*.asf=01;35:*.rm=01;35:*.rmvb=01;35:*.flc=01;35:*.avi=01;35:*.fli=01;35:*.flv=01;35:*.gl=01;35:*.dl=01;35:*.xcf=01;35:*.xwd=01;35:*.yuv=01;35:*.cgm=01;35:*.emf=01;35:*.axv=01;35:*.anx=01;35:*.ogv=01;35:*.ogx=01;35:*.aac=00;36:*.au=00;36:*.flac=00;36:*.mid=00;36:*.midi=00;36:*.mka=00;36:*.mp3=00;36:*.mpc=00;36:*.ogg=00;36:*.ra=00;36:*.wav=00;36:*.axa=00;36:*.oga=00;36:*.spx=00;36:*.xspf=00;36:', 'PHONESIM_PATH': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/.env//bin/pypkjs', 'XDG_SEAT': 'seat0', 'GNOME_DESKTOP_SESSION_ID': 'this-is-deprecated', 'XDG_CURRENT_DESKTOP': 'Unity', 'QT_IM_MODULE': 'ibus', 'LOGNAME': 'svaughan', 'USER': 'svaughan', 'GNOME_KEYRING_CONTROL': '/run/user/1000/keyring-M9Hrpy', 'XDG_VTNR': '7', 'PATH': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/arm-cs-tools/bin:/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/bin:/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/bin:/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games', 'SESSION': 'ubuntu', 'TERM': 'xterm', 'XDG_SESSION_PATH': '/org/freedesktop/DisplayManager/Session0', 'XAUTHORITY': '/home/svaughan/.Xauthority', 'LANGUAGE': 'en_US', 'SESSION_MANAGER': 'local/ubuntu:@/tmp/.ICE-unix/1894,unix/ubuntu:/tmp/.ICE-unix/1894', 'SHLVL': '2', 'QT_QPA_PLATFORMTHEME': 'appmenu-qt5', 'CLUTTER_IM_MODULE': 'xim', 'WINDOWID': '62914571', 'SESSIONTYPE': 'gnome-session', 'IM_CONFIG_PHASE': '1', 'GPG_AGENT_INFO': '/run/user/1000/keyring-M9Hrpy/gpg:0:1', 'SSH_AUTH_SOCK': '/run/user/1000/keyring-M9Hrpy/ssh', 'GDMSESSION': 'ubuntu', 'TEXTDOMAINDIR': '/usr/share/locale/', 'NO_GCE_CHECK': 'False', 'XDG_SEAT_PATH': '/org/freedesktop/DisplayManager/Seat0', '_': '/home/svaughan/pebble-dev/pebble-sdk-4.0-linux64/.env/bin/python', 'GTK_IM_MODULE': 'ibus', 'UPSTART_SESSION': 'unix:abstract=/com/ubuntu/upstart-session/1000/1717', 'XDG_CONFIG_DIRS': '/etc/xdg/xdg-ubuntu:/usr/share/upstart/xdg:/etc/xdg', 'GDM_LANG': 'en_US', 'GTK_MODULES': 'overlay-scrollbar:unity-gtk-module', 'PWD': '/home/svaughan/pebble-dev/pebble-games', 'COLORTERM': 'gnome-terminal'}
 files = ['/home/svaughan/pebble-dev/pebble-games/wscript']
 hash = 2423177563626642261
 options = {'files': '', 'jobs': 1, 'verbose': 0, 'nocache': False, 'progress_bar': 0, 'timestamp': None, 'distcheck_args': None, 'top': '', 'destdir': '', 'keep': 0, 'zones': '', 'debug': False, 'prefix': '/usr/local/', 'download': False, 'force': False, 'targets': '', 'out': ''}
