@@ -1,3 +1,5 @@
 Use UP and DOWN to move up and down.
+
 Hold SELECT to reset.
+
 Use BACK to exit.
