@@ -1,3 +1,4 @@
 5.1
 Fixed Solitaire bug. A user could add a card in the middle of the pile to the foundation at the top, which made the game unwinnable. 
 Shows the Decrypt sequence after a win or a loss. 
+Added instructions for each game. 
